add binary compilation step

--- a/packages/cli/deno.json
+++ b/packages/cli/deno.json
@@ -4,6 +4,7 @@
 
   "tasks": {
     "install": "deno install --global --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --allow-env=HOME --name forager-cli --force src/cli.ts",
+    "compile":       "deno compile     --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000  --output=$INIT_CWD/forager src/cli.ts",
     "develop":       "deno run         --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000 src/cli.ts",
     "develop:watch": "deno run --watch --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000 src/cli.ts",
     "test": "deno test --check --allow-run=deno --allow-write --allow-read --allow-env --trace-leaks test",
