--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,8 @@
 
   "tasks": {
     "develop": "deno task --cwd packages/web build:local && deno task --cwd packages/cli develop --config ~/.config/forager/forager.yml --log-level DEBUG gui"
+    "compile":       "deno task --cwd packages/web build       && deno task --cwd packages/cli compile",
+    "compile:local": "deno task --cwd packages/web build:local && deno task --cwd packages/cli compile",
   },
 
   "nodeModulesDir": "auto",
