--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -8,13 +8,10 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-env:
-  DENO_DIR: deno_dependency_cache
-  DENO_LOCKFILE: ${{ github.workspace }}/deno.lock
 
 defaults:
   run:
-    working-directory: ./packages/web
+    working-directory: './packages/web'
 
 
 jobs:
@@ -41,12 +38,6 @@ jobs:
         id: setup-ffmpeg
         with:
           ffmpeg-version: 7.0.1
-
-      - name: Cache Deno dependencies 
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.DENO_DIR }}
-          key: ${{ hashFiles(env.DENO_LOCKFILE) }}
 
       # - name: Lint
       # run: deno task lint
