--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -8,9 +8,6 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-env:
-  DENO_DIR: deno_dependency_cache
-  DENO_LOCKFILE: ${{ github.workspace }}/deno.lock
 
 defaults:
   run:
@@ -21,7 +18,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, windows-latest]
+        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -40,12 +37,6 @@ jobs:
         with:
           ffmpeg-version: 7.0.1
 
-      - name: Cache Deno dependencies 
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.DENO_DIR }}
-          key: ${{ hashFiles(env.DENO_LOCKFILE) }}
-
       # - name: Lint
       # lint source code & jsr publish requirements. Currently disabled because we should get jsr published before addressing
       #   run: deno lint --ignore=deno_dependency_cache
@@ -53,29 +44,27 @@ jobs:
       - name: Test
         run: deno task test
 
-  publish:
-    runs-on: ubuntu-latest
-    needs: test
+      - name: Compile
+        run: deno task compile
 
-    permissions:
-      contents: read
-      id-token: write
+  # TODO uncomment publishing @forager/cli once we have proper support for raw byte imports in jsr https://github.com/denoland/deno/issues/29904
+  # publish:
+  #   runs-on: ubuntu-latest
+  #   needs: test
 
-    steps:
-      - name: Setup repo
-        uses: actions/checkout@v4
+  #   permissions:
+  #     contents: read
+  #     id-token: write
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v2
-        with:
-          deno-version: canary
+  #   steps:
+  #     - name: Setup repo
+  #       uses: actions/checkout@v4
 
-      - name: Cache Deno dependencies 
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.DENO_DIR }}
-          key: ${{ hashFiles(env.DENO_LOCKFILE) }}
+  #     - name: Setup Deno
+  #       uses: denoland/setup-deno@v2
+  #       with:
+  #         deno-version: canary
 
-      - name: Publish package
-        if: github.ref == 'refs/heads/main'
-        run: deno publish
+  #     - name: Publish package
+  #       if: github.ref == 'refs/heads/main'
+  #       run: deno publish
