--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,13 +1,11 @@
-name: CLI CI
+name: Continuous Releases
 
 
 permissions:
   contents: read
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    tags: ["*"]
 
 defaults:
   run:
@@ -37,10 +35,6 @@ jobs:
         with:
           ffmpeg-version: 7.0.1
 
-      # - name: Lint
-      # lint source code & jsr publish requirements. Currently disabled because we should get jsr published before addressing
-      #   run: deno lint --ignore=deno_dependency_cache
-
       - name: "Install dependencies"
         run: deno install --allow-scripts
 
@@ -52,35 +46,6 @@ jobs:
 
       - name: Compile
         run: deno task compile
-
-      - name: Upload Artifact (Compiled Binaries)
-        uses: actions/upload-artifact@v4
-        with:
-          name: compiled-binaries
-          path: releases/binaries
-          retention-days: 1
-
-  release:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref_type == 'tag'
-
-    steps:
-      - name: Download Artifacts (Compiled Binaries)
-        uses: actions/download-artifact@v5
-        with:
-          name: compiled-binaries
-
-      - name: Generate Release Notes
-        run: |
-          git log --pretty='%h %s' | sed 's/^/- /' > releases/CHANGELOG.md
-
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: "releases/binaries/*"
-          body_path: releases/CHANGELOG.md
-
 
   # TODO uncomment publishing @forager/cli once we have proper support for raw byte imports in jsr https://github.com/denoland/deno/issues/29904
   # publish:
