--- a/packages/cli/deno.json
+++ b/packages/cli/deno.json
@@ -4,7 +4,10 @@
 
   "tasks": {
     "install": "deno install --global --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --allow-env=HOME --name forager-cli --force src/cli.ts",
-    "compile":       "deno compile     --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000  --output=$INIT_CWD/forager src/cli.ts",
+    "compile":         "deno task 'compile:*'",
+    "compile:linux":   "deno compile   --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000  --output=$INIT_CWD/releases/binaries/forager-x86_64-unknown-linux-gnu --target=x86_64-unknown-linux-gnu src/cli.ts",
+    "compile:macos":   "deno compile   --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000  --output=$INIT_CWD/releases/binaries/forager-aarch64-apple-darwin --target=aarch64-apple-darwin src/cli.ts",
+    "compile:windows": "deno compile   --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000  --output=$INIT_CWD/releases/binaries/forager-x86_64-pc-windows-msvc --target=x86_64-pc-windows-msvc src/cli.ts",
     "develop":       "deno run         --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000 src/cli.ts",
     "develop:watch": "deno run --watch --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=127.0.0.1:8000 src/cli.ts",
     "test":       "deno test --check --allow-run=deno --allow-write --allow-read --allow-env --trace-leaks --unstable-raw-imports test",
