--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -19,6 +19,8 @@ jobs:
   test:
     strategy:
       matrix:
+        # TODO actually build this on different OS's, and compile the binaries separately
+        # os: [ubuntu-latest, macos-12, windows-latest]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
