--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -6,6 +6,7 @@ permissions:
 on:
   push:
     branches: ["main"]
+    tags: ["*"]
   pull_request:
     branches: ["main"]
 
@@ -18,6 +19,8 @@ jobs:
   test:
     strategy:
       matrix:
+        # TODO actually build this on different OS's, and compile the binaries separately
+        # os: [ubuntu-latest, macos-12, windows-latest]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
@@ -52,6 +55,35 @@ jobs:
 
       - name: Compile
         run: deno task compile
+
+      - name: Upload Artifact (Compiled Binaries)
+        uses: actions/upload-artifact@v4
+        with:
+          name: compiled-binaries
+          path: releases/binaries
+          retention-days: 1
+
+  release:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref_type == 'tag'
+
+    steps:
+      - name: Download Artifacts (Compiled Binaries)
+        uses: actions/download-artifact@v5
+        with:
+          name: compiled-binaries
+
+      - name: Generate Release Notes
+        run: |
+          git log --pretty='%h %s' | sed 's/^/- /' > releases/CHANGELOG.md
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: "releases/binaries/*"
+          body_path: releases/CHANGELOG.md
+
 
   # TODO uncomment publishing @forager/cli once we have proper support for raw byte imports in jsr https://github.com/denoland/deno/issues/29904
   # publish:
