--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -20,8 +20,8 @@ jobs:
     strategy:
       matrix:
         # TODO actually build this on different OS's, and compile the binaries separately
-        # os: [ubuntu-latest, macos-12, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-12, windows-latest]
+        # os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -53,8 +53,17 @@ jobs:
       - name: Test
         run: deno task --cwd packages/cli test
 
-      - name: Compile
-        run: deno task compile
+      - name: Compile Binary (Linux)
+        if: runner.os == 'Linux'
+        run: deno task --cwd packages/cli compile:os:linux
+
+      - name: Compile Binary (Windows)
+        if: runner.os == 'Windows'
+        run: deno task --cwd packages/cli compile:os:windows
+
+      - name: Compile Binary (macOS)
+        if: runner.os == 'macOS'
+        run: deno task --cwd packages/cli compile:os:macos
 
       - name: Upload Artifact (Compiled Binaries)
         uses: actions/upload-artifact@v4
