--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -20,8 +20,12 @@ jobs:
     strategy:
       matrix:
         # TODO actually build this on different OS's, and compile the binaries separately
-        os: [ubuntu-latest, macos-12, windows-latest]
-        # os: [ubuntu-latest]
+        os:
+          - ubuntu-latest
+          - macos-12
+          # windows builds are currently disabled because path resolution doesn't seem to work
+          # Example: [vite]: Rollup failed to resolve import "~/inputs/lib/inputs_parsers.ts" from "D:\a\forager\forager\packages\core\src\inputs\mod.ts".
+          # - windows-latest
 
     runs-on: ${{ matrix.os }}
 
