--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -79,7 +79,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: test
-    # if: github.ref_type == 'tag'
+    if: github.ref_type == 'tag'
 
     steps:
       - name: Setup repo
@@ -90,12 +90,6 @@ jobs:
         with:
           name: compiled-binaries
           path: releases/binaries/
-
-      - name: debug list
-        run: ls -l
-
-      - name: debug tree
-        run: tree
 
       - name: Generate Release Notes
         run: |
