fix(cli): give release workflow job perimssion to create releases

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -88,6 +88,9 @@ jobs:
     needs: test
     if: github.ref_type == 'tag'
 
+    permissions:
+      contents: write
+
     steps:
       - name: Setup repo
         uses: actions/checkout@v4
