--- a/deno.json
+++ b/deno.json
@@ -19,11 +19,11 @@
     "@std/fs": "jsr:@std/fs@0.229.3",
     "@std/log": "jsr:@std/log@^0.224.6",
     "@std/media-types": "jsr:@std/media-types@0.224.0",
-    "@std/path": "jsr:@std/path@1.0.0",
+    "@std/path": "jsr:@std/path@1.0.3",
     "forager": "./src/mod.ts",
     "ts-pattern": "npm:ts-pattern@5.2.0",
     "@torm/sqlite": "jsr:@torm/sqlite@^1.9.7",
-    "zod": "npm:zod@^3.24.2",
+    "zod": "npm:zod@4.1.11",
 
     "forager-test": "./lib/test/lib/util.ts"
   },
