fix cli compilation

--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,7 @@
   "tasks": {
     "develop": "deno task --cwd packages/web build:local && deno task --cwd packages/cli develop --config ~/.config/forager/forager.yml --log-level DEBUG gui",
     "compile":       "deno task --cwd packages/web build       && deno task --cwd packages/cli compile",
-    "compile:local": "deno task --cwd packages/web build:local && deno task --cwd packages/cli compile:linux"
+    "compile:local": "deno task --cwd packages/web build:local && deno task --cwd packages/cli compile:os:linux"
   },
 
   "imports": {
