--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -4,6 +4,7 @@
 
   "tasks": {
     "lint": "deno lint",
+    "lint:watch": "deno lint --watch",
     "test":       "deno test -P=test --check --trace-leaks test",
     "test:watch": "deno test -P=test --check --trace-leaks --fail-fast --watch",
     "docs:preview": "deno doc --html ./src/mod.ts && deno run --allow-read=. --allow-net=0.0.0.0:8000 jsr:@std/http/file-server docs"
