--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -46,10 +46,9 @@ jobs:
           deno-version: canary
 
       - name: Setup FFMPEG
-        uses: FedericoCarboni/setup-ffmpeg@v3
-        id: setup-ffmpeg
+        uses: AnimMouse/setup-ffmpeg@v1
         with:
-          ffmpeg-version: 7.0.1
+          version: 8.0
 
       # - name: Lint
       # lint source code & jsr publish requirements. Currently disabled because we should get jsr published before addressing
