--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Setup FFmpeg
         uses: AnimMouse/setup-ffmpeg@v1
         with:
-          ffmpeg-version: 8.0
+          version: 8.0
 
       - name: Cache Deno dependencies 
         uses: actions/cache@v4
