--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Setup FFMPEG
         uses: AnimMouse/setup-ffmpeg@v1
         with:
-          version: 8.0
+          version: "8.0"
 
       # - name: Lint
       # lint source code & jsr publish requirements. Currently disabled because we should get jsr published before addressing
