--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -51,9 +51,13 @@ jobs:
       - name: Test
         run: deno task test
 
+      - name: Publishing checks
+        run: deno publish --allow-slow-types --dry-run
+
   publish:
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/main'
 
     permissions:
       contents: read
@@ -74,7 +78,5 @@ jobs:
           path: ${{ env.DENO_DIR }}
           key: ${{ hashFiles(env.DENO_LOCKFILE) }}
 
-
       - name: Publish package
-        if: github.ref == 'refs/heads/main'
         run: deno publish --allow-slow-types
