--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -23,6 +23,9 @@ jobs:
         os:
           - ubuntu-latest
 
+          ##################################################################################################################################################
+          # MacOS arm builds are currently not supported with setup-ffmpeg action, so we are sticking to macos-15 x86 builds                               #
+          ##################################################################################################################################################
           - macos-15-intel
 
           ##################################################################################################################################################
