--- a/deno.json
+++ b/deno.json
@@ -8,8 +8,8 @@
 
   "tasks": {
     "develop": "deno task --cwd packages/web build:local && deno task --cwd packages/cli develop --config ~/.config/forager/forager.yml --log-level DEBUG gui",
-    "compile":       "deno task --cwd packages/web build       && deno task --cwd packages/cli compile",
-    "compile:local": "deno task --cwd packages/web build:local && deno task --cwd packages/cli compile:os:linux"
+    "compile":       "deno task --cwd packages/web prepare && deno task --cwd packages/web build       && deno task --cwd packages/cli compile",
+    "compile:local": "deno task --cwd packages/web prepare && deno task --cwd packages/web build:local && deno task --cwd packages/cli compile:os:linux"
   },
 
   "imports": {
@@ -30,5 +30,6 @@
 
   "unstable": ["raw-imports"],
 
-  "nodeModulesDir": "auto"
+  "nodeModulesDir": "auto",
+  "allowScripts": ["npm:@sveltejs/kit@2.5.24", "npm:@tailwindcss/oxide@4.1.14", "npm:esbuild@0.25.10", "npm:fsevents@2.3.3"]
 }
