--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,10 +4,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "deno run -A --env-file=../../.env vite dev",
 		"build": "vite build",
 		"build:local": "LOCAL_BUILD=true vite build",
-		"preview": "cd build && deno run --allow-env=FORAGER_CONFIG --allow-read --allow-write --allow-net=0.0.0.0:8000 mod.ts",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
