--- a/packages/web/adapter/lib/deno.json
+++ b/packages/web/adapter/lib/deno.json
@@ -4,7 +4,7 @@
   "license": "MIT",
 
   "tasks": {
-    "preview": "deno run -A --check --unstable-raw-imports --env-file=../../../../.env mod.ts",
+    "preview": "deno run -A --check --unstable-raw-imports --env-file=../../../../.env mod.ts"
   },
 
   "imports": {
