impl(web): support .env file in @forager/web (#43)

--- a/packages/web/adapter/lib/deno.json
+++ b/packages/web/adapter/lib/deno.json
@@ -4,8 +4,7 @@
   "license": "MIT",
 
   "tasks": {
-    "preview": "deno run -A --check --unstable-raw-imports --env-file=../../../../.env mod.ts",
-    "preview:watch": "deno run -A --check --unstable-raw-imports --watch mod.ts"
+    "preview": "deno run -A --check --unstable-raw-imports --env-file=../../../../.env mod.ts"
   },
 
   "imports": {
